--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -3,6 +3,16 @@
   perspective-origin: 50% 100px;
 }
 
+.card {
+  height: 400px;
+  background-color: white;
+  padding: 10px;
+  margin: 20px;
+  display: flex;
+  box-shadow: 0px 0px 8px 2px #888888;
+  border-radius: 5px;
+}
+
 .cube {
   margin: 50px;
   width: 250px;
@@ -20,10 +30,16 @@
 }
 
 .add-button {
-  background-color: lightpink;
+  background-color: #121212;
   padding: 10px;
   position: fixed;
-  left: 100px;
+  z-index: 2;
+  color: white;
+  font-family: fantasy;
+}
+
+.add-button:disabled {
+  background-color: lightgray;
 }
 
 .add-button:hover {
@@ -45,25 +61,31 @@
 
 .back {
   transform: translateZ(-100px) rotateY(180deg);
+  background-size: 250px 250px;
 }
 .right {
   transform: rotateY(-270deg) translateX(100px);
   transform-origin: top right;
+  background-size: 250px 250px;
 }
 .left {
   transform: rotateY(270deg) translateX(-100px);
   transform-origin: center left;
+  background-size: 250px 250px;
 }
 .top {
   transform: rotateX(-90deg) translateY(-100px);
   transform-origin: top center;
+  background-size: 250px 250px;
 }
 .bottom {
   transform: rotateX(90deg) translateY(100px);
   transform-origin: bottom center;
+  background-size: 250px 250px;
 }
 .front {
   transform: translateZ(100px);
+  background-size: 250px 250px;
 }
 @keyframes spin {
   from {
