--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -5,7 +5,7 @@
 
 .card {
   height: 400px;
-  background-color: white;
+  background: linear-gradient(to bottom, white 0%, rgb(170, 167, 167) 100%);
   padding: 10px;
   margin: 20px;
   display: flex;
@@ -48,9 +48,12 @@
 
 .price-tag {
   left: 200px;
-  color: black;
+  color: white;
   position: fixed;
   font-size: 20px;
+  font-family: fantasy;
+  width: 100px;
+  background-color: #121212;
 }
 
 .cube div {
