--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -22,8 +22,11 @@
 }
 
 .cart-count {
-  color: white;
-  margin-right: 10px;
+  color: rgb(246, 253, 251);
+  font-size: 20px;
+  position: absolute;
+  right: 12px;
+  top: 2px;
 }
 
 .gallery {
