--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -47,13 +47,14 @@
 }
 
 .price-tag {
-  left: 200px;
+  left: 180px;
   color: white;
   position: fixed;
   font-size: 20px;
   font-family: fantasy;
   width: 100px;
   background-color: #121212;
+  padding: 5px;
 }
 
 .cube div {
